[package]
name = "white-land"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_ase = { git = "https://github.com/B-Reif/bevy_ase" , features = ["benimator"] }
benimator = "0.3.0"
bevy_math = "0.5.0"