[package]
name = "white-land"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.5", features = ["dynamic"] }
bevy_ase = { git = "https://github.com/B-Reif/bevy_ase" , features = ["benimator"] }
benimator = "0.3.0"
bevy_math = "0.5.0"
lazy_static = "1.4"

# Enable optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Maybe also enable only a small amount of optimization for our code:
[profile.dev]
opt-level = 1